# tutorial_sp3

./: CMakeLists.txt
ExampleB/: Algebra.cpp  CMakeLists.txt  Geometry.cpp
SofaAwesome/: CMakeLists.txt  SofaAwesomeConfig.cmake.in
SofaAwesome/bindings/: CMakeLists.txt  SofaAwesome.cpp
SofaAwesome/examples/: AwesomeCamera.py
SofaAwesome/src/SofaAwesome/: AwesomeCamera.cpp  AwesomeCamera.h  initSofaAwesome.cpp
